# ft_platform_lib

./: CMakeLists.txt
src/base/: os_types.h  platform.h  windows_include.h
src/procloop/: process_loop.cpp  process_loop.h  process_loop_impl.h  process_loop_impl_win32.cpp  process_loop_impl_win32.h  windows_include.h
